; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_planner_import.c_ts_make_sort_from_pathkeys.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_planner_import.c_ts_make_sort_from_pathkeys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ts_make_sort_from_pathkeys(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32* @ts_prepare_sort_from_pathkeys(i32* %12, i32* %13, i32 %14, i32* null, i32 0, i32* %7, i32** %8, i32** %9, i32** %10, i32** %11)
  store i32* %15, i32** %4, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* %7, align 4
  %18 = load i32*, i32** %8, align 8
  %19 = load i32*, i32** %9, align 8
  %20 = load i32*, i32** %10, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = call i32* @make_sort(i32* %16, i32 %17, i32* %18, i32* %19, i32* %20, i32* %21)
  ret i32* %22
}

declare dso_local i32* @ts_prepare_sort_from_pathkeys(i32*, i32*, i32, i32*, i32, i32*, i32**, i32**, i32**, i32**) #1

declare dso_local i32* @make_sort(i32*, i32, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
